feat: implement LibraryService with add, remove, search, borrow, return, and list operations